--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "AlexVanVliet\\Adminify\\Tests\\": "tests"
+            "AlexVanVliet\\Adminify\\Tests\\": "tests",
+            "AlexVanVliet\\Adminify\\Tests\\Database\\Factories\\": "tests/database/factories"
         }
     },
     "extra": {
