--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "phpunit/phpunit":  "^9"
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "test-f": "phpunit --filter"
     }
 }
